nullaway_error_A9CCEBCC-37F6-4CE0-9C17-D63D45812B10.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ComponentScanBeanDefinitionParser.java:115: error: [NullAway] passing @Nullable parameter 'ex.getMessage()' where @NonNull is required
			parserContext.getReaderContext().error(ex.getMessage(), parserContext.extractSource(element), ex.getCause());
			                                                    ^
    (see http://t.uber.com/nullaway )
